# Pi3

./: .gitignore  AD_HOC.h  Bike  Bluetooth_Phone.c  Bluetooth_Pi0W.c  CMakeCache.txt  CMakeLists.txt  FindPocketSphinx.cmake  Makefile  OBDII.c  OBDII.h  Pi3Installs.sh  SerialDriver.c  VoiceCommands.c  VoiceCommands.h  a.raw  cmake_install.cmake  helpme.raw  main.c  main.h  makefile  test.raw
Debug/: config.params  makefile  makefile.save  objects.mk
include/: AudioProcessing.h  Bluetooth_Pi0W.h  BroadcastReceiver.h  Button_ISR.h  NetworkPacket.h  SerialDriver.h  main.h
pocketsphinx-5prealpha/: config.status
pocketsphinx-5prealpha/src/libpocketsphinx/: libpocketsphinx.la
pocketsphinx-5prealpha/src/libpocketsphinx/.deps/: acmod.Plo  allphone_search.Plo  bin_mdef.Plo  blkarray_list.Plo  dict.Plo  dict2pid.Plo  fsg_history.Plo  fsg_lextree.Plo  fsg_search.Plo  hmm.Plo  kws_detections.Plo  kws_search.Plo  mdef.Plo  ms_gauden.Plo  tmat.Plo  (+14 more)
pocketsphinx-5prealpha/src/programs/: pocketsphinx_batch  pocketsphinx_continuous  pocketsphinx_mdef_convert
pocketsphinx-5prealpha/swig/python/: _pocketsphinx.la
pocketsphinx-5prealpha/test/: testfuncs.sh
sphinxbase-5prealpha/: config.status
sphinxbase-5prealpha/src/libsphinxad/: libsphinxad.la
sphinxbase-5prealpha/src/sphinx_adtools/: sphinx_cont_seg  sphinx_pitch
sphinxbase-5prealpha/src/sphinx_cepview/: sphinx_cepview
sphinxbase-5prealpha/src/sphinx_fe/: sphinx_fe
sphinxbase-5prealpha/src/sphinx_jsgf2fsg/: sphinx_jsgf2fsg
sphinxbase-5prealpha/src/sphinx_lmtools/: sphinx_lm_convert  sphinx_lm_eval
sphinxbase-5prealpha/swig/python/: _sphinxbase.la
sphinxbase-5prealpha/test/regression/: testfuncs.sh
sphinxbase-5prealpha/test/unit/: testfuncs.sh
src/: AD_HOC.c  AD_HOC.h  AudioProcessing.c  AudioProcessing.h  Bluetooth_Phone.h  Bluetooth_Pi0W.c  Bluetooth_Pi0W.h  BroadcastReceiver.c  BroadcastReceiver.h  BroadcastSender.c  BroadcastSender.h  Button_ISR.c  Button_ISR.h  NetworkPacket.h  NetworkPacket.h.gch  OBDII.c  OBDII.h  SerialDriver.c  VoiceCommands.c  VoiceCommands.h  continuous.c  main.c  test
(+25 files in other folders)
